TRIBITS_SUBPACKAGE(python)

IF( NOT BUILD_SHARED_LIBS)
    MESSAGE(FATAL_ERROR "Saline Python bindings require shared libraries")
ENDIF()

FIND_PACKAGE(PythonInterp 3.5.2 REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)

FIND_PACKAGE(SWIG REQUIRED)
MESSAGE(STATUS "Found SWIG: " ${SWIG_VERSION})

ADD_SUBDIRECTORY(src)
